--- a/MyTrade/Views/User/UserDashBoard.cshtml
+++ b/MyTrade/Views/User/UserDashBoard.cshtml
@@ -1,8 +1,118 @@
-﻿@model MyTrade.Models.User
+﻿@model MyTrade.Models.Dashboard
 
-@{
-    ViewBag.Title = "UserDashBoard";
-    Layout = "~/Views/Shared/_UserLayout.cshtml";
-}
+    @{
+        ViewBag.Title = "UserDashBoard";
+        Layout = "~/Views/Shared/_UserLayout.cshtml";
+    }
 
 
+    <div class="layout-px-spacing">
+        <div class="row layout-top-spacing">
+            <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 col-12 layout-spacing">
+                <div class="widget widget-card-four">
+                    <div class="widget-content">
+                        <div class="w-header">
+                            <div class="w-info">
+                                <h6 class="value">Total Downline</h6>
+                            </div>
+                        </div>
+                        <div class="w-content">
+                            <div class="w-info">
+                                <p class="value">@ViewBag.TotalDownline</p>
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 col-12 layout-spacing">
+                <div class="widget widget-card-four">
+                    <div class="widget-content">
+                        <div class="w-header">
+                            <div class="w-info">
+                                <h6 class="value">Total Direct</h6>
+                            </div>
+                            <div class="task-action">
+                                <div class="dropdown">
+                                    <a>
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-horizontal"><circle cx="5" cy="12" r="1"></circle></svg>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="w-content">
+                            <div class="w-info">
+                                <p class="value">@ViewBag.TotalDirect</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 col-12 layout-spacing">
+                <div class="widget widget-card-four">
+                    <div class="widget-content">
+                        <div class="w-header">
+                            <div class="w-info">
+                                <h6 class="value">Total Active</h6>
+                            </div>
+                            <div class="task-action">
+                                <div class="dropdown">
+                                    <a>
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-horizontal"><circle cx="5" cy="12" r="1"></circle></svg>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="w-content">
+                            <div class="w-info">
+                                <p class="value">@ViewBag.TotalActive</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 col-12 layout-spacing">
+                <div class="widget widget-card-four">
+                    <div class="widget-content">
+                        <div class="w-header">
+                            <div class="w-info">
+                                <h6 class="value">Total In-Active</h6>
+                            </div>
+                            <div class="task-action">
+                                <div class="dropdown">
+                                    <a>
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-horizontal"><circle cx="5" cy="12" r="1"></circle></svg>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="w-content">
+                            <div class="w-info">
+                                <p class="value">@ViewBag.TotalInActive</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <h2><u>Referral Link</u></h2>
+        </div>
+        <div class="row">
+            <div class="col-xl-1 col-lg-6 col-md-6 col-sm-12 col-12">
+                <b>Left:</b>
+            </div>
+            <div class="col-xl-11 col-lg-6 col-md-6 col-sm-12 col-12">
+                <b>djkjfsghhhhhh.fjhgfjgfjhg.cgigfjgfghjfj.com</b>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xl-1 col-lg-6 col-md-6 col-sm-12 col-12">
+                <b>Right:</b>
+            </div>
+            <div class="col-xl-11 col-lg-6 col-md-6 col-sm-12 col-12">
+                <b>.fjhgfjgfjhg.cgigfjgfghjfj.com</b>
+            </div>
+        </div>
+    </div>
