--- a/MyTrade/Views/Admin/AdminDashboard.cshtml
+++ b/MyTrade/Views/Admin/AdminDashboard.cshtml
@@ -11,7 +11,7 @@
                 <div class="widget-content">
                     <div class="w-header">
                         <div class="w-info">
-                            <h6 class="value">Expenses</h6>
+                            <h6 class="value">Total User</h6>
                         </div>
                         <div class="task-action">
                             <div class="dropdown">
@@ -23,7 +23,7 @@
                     </div>
                     <div class="w-content">
                         <div class="w-info">
-                            <p class="value">$ 45,141</p>
+                            <p class="value">5</p>
                         </div>
 
                     </div>
@@ -36,7 +36,7 @@
                 <div class="widget-content">
                     <div class="w-header">
                         <div class="w-info">
-                            <h6 class="value">Expenses</h6>
+                            <h6 class="value">Active Users</h6>
                         </div>
                         <div class="task-action">
                             <div class="dropdown">
@@ -48,7 +48,7 @@
                     </div>
                     <div class="w-content">
                         <div class="w-info">
-                            <p class="value">$ 45,141</p>
+                            <p class="value">2</p>
                         </div>
                     </div>
                 </div>
@@ -59,7 +59,7 @@
                 <div class="widget-content">
                     <div class="w-header">
                         <div class="w-info">
-                            <h6 class="value">Expenses</h6>
+                            <h6 class="value">Blocked Users</h6>
                         </div>
                         <div class="task-action">
                             <div class="dropdown">
@@ -71,12 +71,108 @@
                     </div>
                     <div class="w-content">
                         <div class="w-info">
-                            <p class="value">$ 45,141</p>
+                            <p class="value">2</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        
+        <div id="chartDonut" class="col-xl-6 layout-spacing">
+            <div class="statbox widget box box-shadow">
+                <div class="widget-header">
+                    <div class="row">
+                        <div class="col-xl-6 col-md-6 col-sm-6 col-6">
+                            <h4>User Details</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="widget-content widget-content-area">
+                    <div id="AssociateDetails" class=""></div>
+                    
+                </div>
+            </div>
+        </div>
+        <div id="chartDonut" class="col-xl-6 layout-spacing">
+            <div class="statbox widget box box-shadow">
+                <div class="widget-header">
+                    <div class="row">
+                        <div class="col-xl-6 col-md-6 col-sm-6 col-6">
+                            <h4>Business Details</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="widget-content widget-content-area">
+                    <div id="PayoutDetails" class=""></div>
+
+                </div>
+            </div>
+        </div>
     </div>
 </div>
+<script src="~/plugins/apex/apexcharts.min.js"></script>
+<script src="~/plugins/apex/custom-apexcharts.js"></script>
+<script>
+    // Donut Chart
+    var donutChart = {
+        chart: {
+            height: 300,
+            type: 'donut',
+            toolbar: {
+                show: false,
+            }
+        },
+        labels: ['Active', 'InActive', 'Blocked'],
+        colors: ['#4361ee', '#f10909', '#0e0e0e', ],
+        series: [44, 55, 45],
+        borderColor: '#F97300',
+        responsive: [{
+            breakpoint: 480,
+            options: {
+                chart: {
+                    width: 200
+                },
+                legend: {
+                    position: 'bottom'
+                }
+            }
+        }]
+    }
+
+    var donut = new ApexCharts(
+        document.querySelector("#AssociateDetails"),
+        donutChart
+    );
+
+    donut.render();
+    var payoutChart = {
+        chart: {
+            height: 300,
+            type: 'donut',
+            toolbar: {
+                show: false,
+            }
+        },
+        colors: ['#385830', '#f10909'],
+        labels: ['Tr1','Tr2'],
+        series: [44, 55],
+      
+        responsive: [{
+            breakpoint: 480,
+            options: {
+                chart: {
+                    width: 200
+                },
+                legend: {
+                    position: 'bottom'
+                }
+            }
+        }]
+    }
+
+    var donut = new ApexCharts(
+        document.querySelector("#PayoutDetails"),
+        payoutChart
+    );
+
+    donut.render();
+</script>
