--- a/MyTrade/Views/User/UserDashBoard.cshtml
+++ b/MyTrade/Views/User/UserDashBoard.cshtml
@@ -104,7 +104,7 @@
                 <b>Left:</b>
             </div>
             <div class="col-xl-11 col-lg-6 col-md-6 col-sm-12 col-12">
-                <b>djkjfsghhhhhh.fjhgfjgfjhg.cgigfjgfghjfj.com</b>
+                <a target="_blank" style="font-size: 14px;" href=/Home/Registration?Pid=Crypto.Encrypt(Session["LoginId"]+"|L")">/Home/Registration?Pid=Crypto.Encrypt(Session["LoginId"] + "|L")</a>
             </div>
         </div>
         <div class="row">
@@ -112,7 +112,7 @@
                 <b>Right:</b>
             </div>
             <div class="col-xl-11 col-lg-6 col-md-6 col-sm-12 col-12">
-                <b>.fjhgfjgfjhg.cgigfjgfghjfj.com</b>
+                <a target="_blank" style="font-size: 14px;" href="/Home/Registration?Pid=Crypto.Encrypt(Session["LoginId"]+"|R")">/Home/Registration?Pid=Crypto.Encrypt(Session["LoginId"] + "|R")</a>
             </div>
         </div>
     </div>
