--- a/MyTrade/Views/User/BinaryTree.cshtml
+++ b/MyTrade/Views/User/BinaryTree.cshtml
@@ -643,17 +643,13 @@
 </div>
 
 <input type="hidden" id="firtsMemberID" value="@ViewBag.Fk_UserId" />
-
+<link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.12.0/themes/smoothness/jquery-ui.css">
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-
 <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-<link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.12.0/themes/smoothness/jquery-ui.css">
-<script src="../../WebsiteCss/js/jquery.js"></script>
+<script src="~/assets/js/libs/jquery-3.1.1.min.js"></script>
+@*<script src="../../WebsiteCss/js/jquery.js"></script>*@
 <script type="text/javascript">
-
-
-
 
     var winHeight = $(window).height();
     var winWidth = $(window).width();
