--- a/MyTrade/Views/User/BinaryTree.cshtml
+++ b/MyTrade/Views/User/BinaryTree.cshtml
@@ -648,12 +648,12 @@
 
 <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 <link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.12.0/themes/smoothness/jquery-ui.css">
-<script src="~/WebsiteCss/js/jquery.js"></script>
+<script src="../../WebsiteCss/js/jquery.js"></script>
 <script type="text/javascript">
 
     var winHeight = $(window).height();
     var winWidth = $(window).width();
-
+    var $j = jQuery.noConflict();
     $("body").click(function () {
         $("a").popover('hide');
     });
