--- a/MyTrade/Views/Shared/_UserLayout.cshtml
+++ b/MyTrade/Views/Shared/_UserLayout.cshtml
@@ -241,7 +241,7 @@
                 </ul>
             </nav>
         </div>
-        <div id="content" class="main-content">
+        <div id="content" class="main-content p-4">
             @RenderBody();
             <div class="footer-wrapper">
                 <div class="footer-section f-section-1">
