--- a/MyTrade/Views/Shared/_UserLayout.cshtml
+++ b/MyTrade/Views/Shared/_UserLayout.cshtml
@@ -68,11 +68,14 @@
             <ul class="navbar-item flex-row ml-md-auto">
                 <li class="nav-item dropdown user-profile-dropdown">
                     <a href="javascript:void(0);" class="nav-link dropdown-toggle user" id="userProfileDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                        @if (@Session["Profile"] != null)
+                        @if (Session["Profile"].ToString() != "")
                         {
                             <img src="@Session["Profile"]" alt="@Session["FullName"]">
                         }
-                        
+                        else
+                        {
+                            <img src="/assets/img/usericon.jpg" alt="@Session["FullName"]">
+                        }
                     </a>
                     <div class="dropdown-menu position-absolute" aria-labelledby="userProfileDropdown">
                         <div class="">
